# python_trade_runner

./: .gitignore  LICENSE  LICENSE.txt  README.md  demo.ipynb  drawdowns.test.py  pyproject.toml  requirements.txt  setup.cfg  tests.py
python_trade_runner/: __init__.py  backtest.py  chart.py  constants.py  drawdowns.py  infos.py  pattern.py  setup.py  utils.py  version.py
src/: backtest.py  chart.py  data.py  drawdowns.py  infos.py  pattern.py  setup.py  trade.py  utils.py  visuals.py
src/python_trade_runner/: backtest.py  data.py  drawdowns.py  infos.py  pattern.py  trade.py  visuals.py
test/: test_backtest.py  test_drawdowns.py
test/data/binance/BTCUSDT/: binance-BTCUSDT-5m.csv
