[metadata]
name = python_trade_runner
version = attr: python_trade_runner.VERSION
author = Loic Ledreck
author_email = loic.ledreck@gmail.com
license = MIT
description = Helper for backtesting and running trading strategies
url = https://github.com/loicl971/python_trade_runner
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = python_trade_runner
setup_requires = setuptools>=61; setuptools_scm[toml]>=7
include_package_data = True
python_requires = >=3.12
install_requires =
    pandas
    numpy
    plotly
    scipy
tests_require = 
    pytest
    matplotlib

[options.extras_require]
tests = 
    pytest

[coverage:run]
relative_files = True